@@ -65,6 +65,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashMap
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashSet
 import|;
 end_import
@@ -224,6 +233,143 @@ block|}
 block|}
 finally|finally
 block|{
+if|if
+condition|(
+name|br
+operator|!=
+literal|null
+condition|)
+name|br
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|result
+return|;
+block|}
+comment|/**    * Reads a stem dictionary. Each line contains:    *<pre>word<b>\t</b>stem</pre>    * (i.e. two tab seperated words)    *    * @return stem dictionary that overrules the stemming algorithm    * @throws IOException     */
+DECL|method|getStemDict
+specifier|public
+specifier|static
+name|HashMap
+name|getStemDict
+parameter_list|(
+name|File
+name|wordstemfile
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|wordstemfile
+operator|==
+literal|null
+condition|)
+throw|throw
+operator|new
+name|NullPointerException
+argument_list|(
+literal|"wordstemfile may not be null"
+argument_list|)
+throw|;
+name|HashMap
+name|result
+init|=
+operator|new
+name|HashMap
+argument_list|()
+decl_stmt|;
+name|BufferedReader
+name|br
+init|=
+literal|null
+decl_stmt|;
+name|FileReader
+name|fr
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|fr
+operator|=
+operator|new
+name|FileReader
+argument_list|(
+name|wordstemfile
+argument_list|)
+expr_stmt|;
+name|br
+operator|=
+operator|new
+name|BufferedReader
+argument_list|(
+name|fr
+argument_list|)
+expr_stmt|;
+name|String
+name|line
+decl_stmt|;
+while|while
+condition|(
+operator|(
+name|line
+operator|=
+name|br
+operator|.
+name|readLine
+argument_list|()
+operator|)
+operator|!=
+literal|null
+condition|)
+block|{
+name|String
+index|[]
+name|wordstem
+init|=
+name|line
+operator|.
+name|split
+argument_list|(
+literal|"\t"
+argument_list|,
+literal|2
+argument_list|)
+decl_stmt|;
+name|result
+operator|.
+name|put
+argument_list|(
+name|wordstem
+index|[
+literal|0
+index|]
+argument_list|,
+name|wordstem
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|fr
+operator|!=
+literal|null
+condition|)
+name|fr
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 if|if
 condition|(
 name|br
